# BCICollectSubsystem

./: .gitignore  .gitmodules  BCI.pro  BCI.pro.user.aaf37cb  BCI.pro.user.ff602d8  CMakeLists.txt  CMakeLists.txt.user.097d205  CMakeLists.txt.user.31478cf  CMakeLists.txt.user.ff602d8  CMakelists.txt  IndecWidgetV2.pro  IntroduceWidget.pro  LiveBroadcastWidget.pro  Makefile  Makefile.Debug  Makefile.Release  PersonalData.pro  README.md  StartGameWidget.pro  StoreWidget.pro  WBGWidget.pro  bcimysql.cpp  bcimysql.h  dimensionchartwidget.cpp  dimensionchartwidget.h  ftpserverwidget.cpp  ftpserverwidget.h  indexwidget.cpp  indexwidget.h  introducewidget.ui  jsonoperation.cpp  live_broadcast.cpp  live_broadcast.h  live_broadcast.ui  login.cpp  login.h  login.ui  main.cpp  object_script.BCI.Debug  object_script.BCI.Release  (+33 more)
BCIMysql/: bcimysql.cpp  (+1 more)
QRCodeLoginWidget/: CMakeLists.txt
QRCodeLoginWidget/src/: qrcodeloginwidget.h
QRCodeLoginWidget/test/: CMakelists.txt
Register/: CMakeLists.txt
Register/src/: UserInfoStruct.h  register.cpp  register.h  register_info.ui
Register/test/: main.cpp
WBG/: CMakeLists.txt
WBG/BCIGameOverData/: CMakeLists.txt  README.txt
WBG/BCIGameOverData/res/: res.qrc
WBG/BCIGameOverData/src/: gameoverwidget.cpp  gameoverwidget.h  gameoverwidget.ui
WBG/BCIGameOverData/test/: CMakeLists.txt  main.cpp  test.cpp  test.h
WBG/BCIMonitor/: CMakeLists.txt  CMakeLists.txt.user.479d0a7  README.md
WBG/BCIMonitor/FileStorage/: CMakeLists.txt  CMakeLists.txt.user.479d0a7
WBG/BCIMonitor/FileStorage/MAT/src/: mat.cpp  mat.h
WBG/BCIMonitor/FileStorage/src/: filestorage.cpp  filestorage.h  matstorage.cpp  matstorage.h  storage.cpp  storage.h
WBG/BCIMonitor/FileStorage/test/: CMakeLists.txt  main.cpp
WBG/BCIMonitor/SampleDevice/: CMakeLists.txt
WBG/BCIMonitor/SampleDevice/BPSDK/: README.txt
WBG/BCIMonitor/SampleDevice/filter/: CMakeLists.txt
WBG/BCIMonitor/SampleDevice/src/: SampleDevice.h  datathread.cpp  datathread.h  main.py  operationthread.cpp  operationthread.h  sample.cpp  sample.h  sampledevice.cpp
WBG/BCIMonitor/SampleDevice/test/: CMakeLists.txt  main.cpp  test.cpp  test.h
WBG/BCIMonitor/curvegroup/: CMakeLists.txt  README.md
WBG/BCIMonitor/curvegroup/src/: curvegroup.cpp  curvegroup.h
WBG/BCIMonitor/curvegroup/test/: main.cpp
WBG/BCIMonitor/res/: res.qrc
WBG/BCIMonitor/src/: bcimonitor.cpp  bcimonitor.h  bcimonitor.ui  connectdialog.cpp  connectdialog.h  connectdialog.ui  processdata.cpp  processdata.h  selectdialog.cpp  selectdialog.h  selectdialog.ui
WBG/BCIMonitor/test/: CMakelists.txt  main.cpp
WBG/FTPUploadFile/src/: ftpconfig.cpp  uploadfilehandler.cpp  uploadfilehandler.h
WBG/FTPUploadFile/test/: CMakeLists.txt  test.cpp
WBG/FileProcess/: FTP.rar
WBG/FileProcess/BCIGameEndingData/: gameoverwidget.cpp  gameoverwidget.h  gameoverwidget.ui  tcpserver.cpp  tcpserver.h
WBG/FileProcess/FTP/: savefiletobci.cpp  savefiletobci.h  uploadfileftp.cpp  uploadfileftp.h
WBG/FileProcess/FTPSendFile/: ftpsender.cpp  ftpsender.h
WBG/FtpServer/src/: ftpserverwidget.cpp  ftpserverwidget.h  savefiletobci.h
WBG/GameFinishWidget/: CMakeLists.txt
WBG/GameFinishWidget/res/: curve.qml  progressbar.qml  qml_res.qrc  radar.qml
WBG/GameFinishWidget/src/: gamefinishdata.cpp  gamefinishdata.h  gamefinishwidget.cpp  gamefinishwidget.h  gamefinishwidget.ui
WBG/GameFinishWidget/src/chart/: curve.cpp  curve.h  curve.ui  radar.cpp  radar.h  radar.ui
WBG/GameFinishWidget/src/data/: gameenddata.cpp  gameenddata.h  gameenddata.ui  gameenddataitem.cpp  gameenddataitem.h  gameenddataitem.ui
WBG/GameFinishWidget/src/progressbar/: progressbar.cpp  progressbar.h  progressbar.ui
WBG/GameFinishWidget/test/: CMakeLists.txt  main.cpp
WBG/IndexWidget/: indexwidget.cpp  indexwidget.h  indexwidget.ui
WBG/IntroduceWidget/: introducewidget.cpp  introducewidget.h  introducewidget.ui
WBG/IntroduceWidget/save/: introducewidget.cpp  introducewidget.h  introducewidget.ui
WBG/Login/: CMakeLists.txt
WBG/Login/QRCodeLoginWidget/res/: pic.qrc
WBG/Login/QRCodeLoginWidget/src/: qrcodeloginwidget.cpp
WBG/Login/QRCodeLoginWidget/test/: main.cpp
WBG/Login/Register/src/: register_info.cpp
WBG/Login/Register/test/: CMakelists.txt
WBG/Login/res/: pic.qrc
WBG/Login/src/: Login.cpp  Login.h  Login.ui  jsonoperation.cpp  jsonoperation.h
WBG/Login/test/: CMakelists.txt  main.cpp
WBG/PersonalData/: itemchart.cpp  itemchart.h  personaldatawidget.cpp  personaldatawidget.h  personaldatawidget.ui  savefiletobci.cpp  savefiletobci.h
WBG/StartGameWidget/: start_game.cpp  start_game.h  start_game.ui
WBG/StoreWidget/: newgameitem.cpp  newgameitem.h  newgameitem.ui  store.cpp  store.h  store.ui  welfarecenter.cpp  welfarecenter.h  welfarecenter.ui
WBG/TCPTool/: CMakeLists.txt
WBG/TCPTool/analysisgamemsg/: CMakeLists.txt  README.md
WBG/TCPTool/analysisgamemsg/src/: analysisgamemsg.cpp  analysisgamemsg.h
WBG/TCPTool/analysisgamemsg/test/: CMakeLists.txt
WBG/TCPTool/src/: tcpserver.cpp  tcpserver.h
WBG/TCPTool/test/: CMakeLists.txt  main.cpp
WBG/TempWidget/: CAboutMe.cpp  CAboutMe.h  CAboutMe.ui  CActMore.cpp  CActMore.h  CActMore.ui  CFuncDetial.cpp  CFuncDetial.h  CFuncDetial.ui  CGameItem.cpp  CGameItem.h  CGameItem.ui  CGameUpdateItem.cpp  CGameUpdateItem.h  CGameUpdateItem.ui  CGameViewItem.cpp  CGameViewItem.h  CGameViewItem.ui  CLastNewItem.cpp  CLastNewItem.h  CLastNewItem.ui  CNavigationBar.cpp  CNavigationBar.h  CNavigationBar.ui  CNoticeItem.cpp  CNoticeItem.h  CNoticeItem.ui  CPalyingItem.cpp  CPalyingItem.h  CPalyingItem.ui  CPlayPicture.cpp  CPlayPicture.h  CPlayPicture.ui  CPlayVideo.cpp  CPlayVideo.h  CPlayVideo.ui  CProduct.cpp  CProduct.h  CProduct.ui  CRecenePlayingItem.cpp  (+27 more)
WBG/UserGameWidget/src/: dynamicdata.h  dynamicitem.cpp  dynamicitem.h  gamedata.h  gameitem.h  gameitem.ui  gameoverviewitem.h  gameoverviewitem.ui  usergamewidget.cpp  usergamewidget.h  usergamewidget.ui
mat/: CMakeLists.txt  main.cpp  matread.cpp
mat/src/: matread.cpp  matread.h
test/: CMakeLists.txt  main.cpp  test.cpp  test.h
(+123 files in other folders)
