cmake_minimum_required(VERSION 3.10.0)
project(sampledevice_test)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt5 COMPONENTS Core REQUIRED)
file(COPY ${BpDLL} DESTINATION ".")
file(COPY ${BpBIT} DESTINATION ".")
file(COPY ${RES_EXE} DESTINATION "./file")
add_executable(sampledevice_test main.cpp test.cpp test.h )
target_link_libraries(sampledevice_test Qt5::Core SampleDevice)
